[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/SpriteSheets/Slime Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Slime.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "die"
length = 0.75
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.65 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dispose"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enemy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attack/BodyAttack:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump_attack"
tracks/0/type = "value"
tracks/0/path = NodePath("enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_on_jump_attack"
}, {
"args": [  ],
"method": "_end_jump_attack"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "jump_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=21]
states/die/node = SubResource( 5 )
states/die/position = Vector2( 567, 50 )
states/hurt/node = SubResource( 6 )
states/hurt/position = Vector2( 280, 168 )
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 265, 50 )
states/jump_attack/node = SubResource( 8 )
states/jump_attack/position = Vector2( 581, 168 )
transitions = [ "idle", "hurt", SubResource( 9 ), "hurt", "idle", SubResource( 10 ), "hurt", "die", SubResource( 11 ), "die", "hurt", SubResource( 12 ), "idle", "die", SubResource( 13 ), "die", "idle", SubResource( 14 ), "hurt", "jump_attack", SubResource( 15 ), "jump_attack", "idle", SubResource( 16 ), "idle", "jump_attack", SubResource( 17 ), "jump_attack", "die", SubResource( 18 ), "jump_attack", "hurt", SubResource( 19 ), "die", "jump_attack", SubResource( 20 ) ]
start_node = "idle"
graph_offset = Vector2( -100.741, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 12.25, 5 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 12.25, 4 )

[sub_resource type="CircleShape2D" id=25]
radius = 27.0104

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 13, 5.25 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( -5, -1 )
scale = Vector2( 4, 4 )
z_as_relative = false
collision_layer = 1024
collision_mask = 5
script = ExtResource( 2 )

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 0.75, -1.25 )
scale = Vector2( 2, 2 )
z_as_relative = false
texture = ExtResource( 1 )
offset = Vector2( 0, -15 )
hframes = 8
vframes = 5
frame = 32

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 1 )
anims/hurt = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jump_attack = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 22 )

[node name="HurtBox" type="Area2D" parent="." groups=[
"hurtbox",
]]
position = Vector2( 1.5, -4.25 )
collision_layer = 16384
collision_mask = 16

[node name="HurtBoxArea" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, -4.25 )
shape = SubResource( 24 )

[node name="Sight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 100 )
collide_with_bodies = false

[node name="FlockBox" type="Area2D" parent="." groups=[
"enemy",
]]
position = Vector2( -0.25, 0 )
collision_layer = 262144
collision_mask = 262144

[node name="FlockBoxArea" type="CollisionShape2D" parent="FlockBox"]
position = Vector2( 1.75, -4.25 )
shape = SubResource( 25 )

[node name="Attack" type="Area2D" parent="."]
modulate = Color( 0.431373, 1, 0, 1 )
collision_layer = 4096
collision_mask = 0

[node name="BodyAttack" type="CollisionShape2D" parent="Attack"]
position = Vector2( 1.5, -4.25 )
shape = SubResource( 26 )

[connection signal="area_entered" from="FlockBox" to="." method="_on_FlockBox_area_entered"]
[connection signal="area_exited" from="FlockBox" to="." method="_on_FlockBox_area_exited"]
[connection signal="area_entered" from="Attack" to="." method="_on_Attack_area_entered"]
